objects/HS_Event__c.object
<CustomObject>
    <fields>
        <fullName>Corporate_Partners__c</fullName>
        <label>Corporate Partners</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New Look</fullName>
                </value>
                <value>
                    <fullName>Starbucks</fullName>
                </value>
                <value>
                    <fullName>Lloyds</fullName>
                </value>
                <value>
                    <fullName>Berkeley Group</fullName>
                </value>
                <value>
                    <fullName>Zendesk</fullName>
                </value>
                <value>
                    <fullName>GLA</fullName>
                </value>
                <value>
                    <fullName>Bloomberg</fullName>
                </value>
                <value>
                    <fullName>No Corporate Partner</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Event_Description__c</fullName>
        <label>Event Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Event_Title__c</fullName>
        <label>Event Title</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HS_Event_Type__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>HS Event Type</label>
        <referenceTo>HS_Event_Type__c</referenceTo>
        <relationshipLabel>HS Events</relationshipLabel>
        <relationshipName>HS_Events</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Publish_to_Website__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Publish to Website</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Region</label>
        <referenceTo>HS_Region__c</referenceTo>
        <relationshipLabel>HS Events</relationshipLabel>
        <relationshipName>HS_Events</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <label>HS Event</label>
    <listViews>
        <fullName>All_Events</fullName>
        <columns>NAME</columns>
        <columns>Event_Title__c</columns>
        <columns>Corporate_Partners__c</columns>
        <columns>Publish_to_Website__c</columns>
        <columns>Region__c</columns>
        <columns>HS_Event_Type__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Events</label>
    </listViews>
    <listViews>
        <fullName>Ambassador_Events_2016</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>HS_Event_Type__c</field>
            <operation>equals</operation>
            <value>ambassador engagement</value>
        </filters>
        <label>Ambassador Events 2016</label>
    </listViews>
    <nameField>
        <label>HS Event</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>HS Events</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>